vista de invitado

--- a/app/views/principal/invitado.html.erb
+++ b/app/views/principal/invitado.html.erb
@@ -12,63 +12,47 @@
         <%= image_tag "7.jpg" %>
     </a>
 </div>
-<div class="container">
 
-</div>
 
 <div class="row center-xs">
     <div class="col-xs-12 col-lg-6">
         <div class="card borde-radio-8">
             <div class="card-content">
                 <section class="fondo">
-                    <h5>Bienvenidos a La Gran Comisión Comunidad Cristiana Integral de las Asambleas de Dios</h5>
+                    <h3>Bienvenidos </h3>
                 </section>
-                <span class="card-title verdeBri-text left-align">Nombre de la publicacion</span>
-                <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+                <span class="card-title verdeBri-text left-align"> A la Iglesia Gran Comisión Comunidad Cristiana Integral de las Asambleas de Dios</span>
+                <p class="left-align">Queremos aprender de la Palabra de Dios para poder vivir más como Cristo, servir con habilidad a nuestras comunidades y para poder responder al mundo frente a tantos vientos de falsas doctrinas. La sana doctrina trae discernimiento y sabiduría
+                    al creyente fiel.</p>
             </div>
 
         </div>
     </div>
 </div>
-<footer class="page-footer white-text blue-grey darken-2" style="padding-top: 0">
-    <div class="footer-copyright ">
-        <div class="container">
-            <a class="btn-floating  btn-small waves-effect waves-light btn-flat">
-                <i><%= image_tag "icons8-facebook-nuevo-24.png" %></i>
-            </a>
-            <a class="btn-floating  btn-small waves-effect waves-light btn-flat">
-                <i><%= image_tag "icons8-instagram-24.png" %></i>
-            </a>
-            <a class="btn-floating  btn-small waves-effect waves-light btn-flat">
-                <i><%= image_tag "icons8-twitter-cuadrado-24.png" %></i>
-            </a>
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+<div class="container">
+    <div class="row">
+        <div class="col l3  s12">
+            <p>El propósito es alcanzar a todos los niños y jóvenes de Colombia y el mundo con el mensaje que Cristo salva y pronto viene, utilizando todos los medios que estén a nuestro alcance, formando discípulos llenos del Espíritu Santo.</p>
+            <a class="waves-effect waves-light btn">Ver más</a>
+        </div>
+        <div class="offset-1 col l3 s12">
+            <p>Este ministerio es uno de los puntos fuertes de la iglesia. Queremos continuar con esta tradición rica y profunda que tenemos en esta área. La educación cristiana tanto para el adulto como para el niño es de vital importancia en su discipulado
+                cristiano.
+            </p>
+            <a class="waves-effect waves-light btn">Ver más</a>
+        </div>
+
+        <div class=" offset-1 col l3  s12">
+
+            <p>Los Grupos de Crecimiento Integral, o GCI, son células o pequeños centros de enseñanzas, las diferentes casas de los hermanos de nuestra comunidad. Aquí se habla de las escrituras de una manera sencilla y práctica y donde los asistentes son
+                edificados.
+            </p>
+            <a class="waves-effect waves-light btn">Ver más</a>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
-    </div>
-</footer>
+</div>
+
+
 
 <script>
     $('.carousel.carousel-slider').carousel({
