--- a/app/views/discipleships/show.html.erb
+++ b/app/views/discipleships/show.html.erb
@@ -1,68 +1,84 @@
 <div class="row  middle-xs no-margin">
-  <div class="container">
-    <div class="row center-xs" >
+    <div class="container">
+        <div class="row center-xs">
 
-        <div class="col-xs-12
+            <div class="col-xs-12
                     col-sm-8
                     col-md-6
                     col-lg-6 ">
-          <div class="box">
-            <div class="card z-depth-3 borde-radio-10">
-              <div class="card-content black-text start-xs">
-                <span class="card-title center"><%=@discipleship.nombre%></span>
-                <b>Descripcion: </b><p><%=@discipleship.descripcion%></p>
-                <b>Rango otorgado: </b><p><%=@discipleship.rangoOtorgado%></p>
-                <b>Pacto asociado: </b><p>Pacto de compromiso</p>
-                <b>Descripcion del convenio: </b><p><%=@discipleship.descripcionPacto%></p>
-                <div class="actions center">
-                  <%= link_to  "Crear grupo", new_discipleship_group_path(@discipleship,@group), class: "waves-effect waves-teal btn-flat " %>
-                  <%= link_to  "Volver", discipleships_path, class: "waves-effect waves-teal btn-flat " %>
-                  <%= link_to  "Editar", edit_discipleship_path, class: "waves-effect waves-teal btn-flat " %>
-                  <%= link_to  "Eliminar", @discipleship, data: { confirm: 'Esta seguro?' },class: "waves-effect waves-teal btn-flat ", method: :delete %>
+                <div class="box">
+                    <div class="card z-depth-3 borde-radio-10">
+                        <div class="card-content black-text start-xs">
+                            <span class="card-title center"><%=@discipleship.nombre%></span>
+                            <b>Descripcion: </b>
+                            <p>
+                                <%=@discipleship.descripcion%>
+                            </p>
+                            <b>Rango otorgado: </b>
+                            <p>
+                                <%=@discipleship.rangoOtorgado%>
+                            </p>
+                            <b>Pacto asociado: </b>
+                            <p>Pacto de compromiso</p>
+                            <b>Descripcion del convenio: </b>
+                            <p>
+                                <%=@discipleship.descripcionPacto%>
+                            </p>
+                            <div class="actions center">
+                                <%= link_to  "Crear grupo", new_discipleship_group_path(@discipleship,@group), class: "waves-effect waves-teal btn-flat " %>
+                                    <%= link_to  "Volver", discipleships_path, class: "waves-effect waves-teal btn-flat " %>
+                                        <%= link_to  "Editar", edit_discipleship_path, class: "waves-effect waves-teal btn-flat " %>
+                                            <%= link_to  "Eliminar", @discipleship, data: { confirm: 'Esta seguro?' },class: "waves-effect waves-teal btn-flat ", method: :delete %>
 
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-    </div>
-    <div>
-      <div class="center-xs">
-        <h4>Grupos</h4>
-      </div>
-      <br>
-      <hr>
-    </div>
-    <div class="row center-xs">
-      <% @discipleship.groups.sort_by{|a| a.activo ? 0 : 1}.each do |grupo|%>
-        <div class="col-xs-12
+        <div>
+            <div class="center-xs">
+                <h4>Grupos</h4>
+            </div>
+            <br>
+            <hr>
+        </div>
+        <div class="row center-xs">
+            <% @discipleship.groups.sort_by{|a| a.activo ? 0 : 1}.each do |grupo|%>
+                <div class="col-xs-12
                       col-sm-8
                       col-md-6
                       col-lg-4 ">
-            <div class="box">
-              <div class="card z-depth-3 borde-radio-10">
-                <div class="card-content black-text start-xs">
-                  <span class="card-title center"><%=grupo.codigo%></span>
-                  <b>Discipulado: </b><p><%=@discipleship.nombre%></p>
-                  <b>Docente a cargo: </b><p><%= grupo.user.presence ? grupo.user.nombre_completo : "Sin docente asignado" %></p>
-                  <b>Estudiantes inscritos: </b><p><%=Enroll.where(group_id: grupo.id).count %></p>
+                    <div class="box">
+                        <div class="card z-depth-3 borde-radio-10">
+                            <div class="card-content black-text start-xs">
+                                <span class="card-title center"><%=grupo.codigo%></span>
+                                <b>Discipulado: </b>
+                                <p>
+                                    <%=@discipleship.nombre%>
+                                </p>
+                                <b>Docente a cargo: </b>
+                                <p>
+                                    <%= grupo.user.presence ? grupo.user.nombre_completo : "Sin docente asignado" %>
+                                </p>
+                                <b>Estudiantes inscritos: </b>
+                                <p>
+                                    <%=Enroll.where(group_id: grupo.id).count %>
+                                </p>
+                            </div>
+                            <section <%=grupo.activo? ? "class='verdeAdo white-text borde-radio-buton-10'".html_safe : 'class="grey borde-radio-buton-10"'.html_safe %> >
+                                <div class="actions center ">
+                                    <%= link_to  "Ver detalles", group_path(grupo), class: "waves-effect waves-teal btn-flat white-text " %>
 
-
-
+                                </div>
+                            </section>
+                        </div>
+                    </div>
                 </div>
-                <section <%= grupo.activo? ? "class='verdeAdo white-text borde-radio-buton-10'".html_safe : 'class="grey borde-radio-buton-10"'.html_safe %> >
-                    <div class="actions center ">
-                  <%= link_to  "Ver detalles", group_path(grupo), class: "waves-effect waves-teal btn-flat white-text " %>
-
-                  </div>
-                  </section>
-              </div>
-            </div>
+                <%end%>
         </div>
-      <%end%>
+
+
+
     </div>
-
-
-
-  </div>
 </div>
