--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,3 +1,3 @@
-<%@texto= "Editar grupo #{@group.nombre}"%>
+<%@texto= "Editar grupo #{@group.codigo}"%>
 
-<%= render 'form', group: @group,horary: @group.horary %>
+    <%= render 'form', group: @group,horary: @group.horary %>
