--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,30 +1,35 @@
-<table>
-  <thead>
-    <tr>
-      <th>id</th>
-      <th>Nombre</th>
-      <th>Activo</th>
-      <th>Discipleship</th>
-      <th>Teacher</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.id %></td>
-        <td><%= group.codigo %></td>
-        <td><%= group.activo %></td>
-        <td><%= group.discipleship.nombre %></td>
-
-        <td><%= group.user.presence ? group.user.nombre_completo : "Sin docente asignado" %></td>
-        <td><%= link_to 'Show', discipleship_groups_path(group.discipleship,group) %></td>
-        <td><%= link_to 'Edit', group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div>
+    <div class="center-xs">
+        <h4>Grupos</h4>
+    </div>
+    <br>
+</div>
+<div class="row center-xs">
+    <% @groups.each do |grupo| %>
+        <div class="col-xs-12
+    col-sm-8
+    col-md-6
+    col-lg-4 ">
+            <div class="box">
+                <div class="card z-depth-3 borde-radio-10">
+                    <div class="card-content black-text start-xs">
+                        <span class="card-title center"><%=grupo.codigo%></span>
+                        <b>Discipulado: </b>
+                        <p>
+                            <%=grupo.discipleship.nombre%>
+                        </p>
+                        <b>Estudiantes inscritos: </b>
+                        <p>
+                            <%=Enroll.where(group_id: grupo.id).count %>
+                        </p>
+                    </div>
+                    <section class="verdeAdo white-text borde-radio-buton-10">
+                        <div class="actions center ">
+                            <%= link_to  "Ver detalles", group_path(grupo), class: "waves-effect waves-teal btn-flat white-text " %>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <%end%>
+</div>
