--- a/app/assets/stylesheets/principal.scss
+++ b/app/assets/stylesheets/principal.scss
@@ -1,80 +1,79 @@
 // Place all the styles related to the Principal controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-	// src: url(asset-path('Roboto-Regular.ttf')),
-	// 	url(asset-path('Roboto-Thin.ttf')),
-	// 	 url(asset-path('Roboto-ThinItalic.ttf')),
-	// 	 url(asset-path('Roboto-Light.ttf')),
-	// 	 url(asset-path('Roboto-LightItalic.ttf')),
-	// 	 url(asset-path('Roboto-Regular.ttf')),
-	// 	 url(asset-path('Roboto-Italic.ttf')),
-	// 	 url(asset-path('Roboto-Medium.ttf')),
-	// 	 url(asset-path('Roboto-MediumItalic.ttf')),
-	// 	 url(asset-path('Roboto-Bold.ttf')),
-	// 	 url(asset-path('Roboto-BoldItalic.ttf')),
-	// 	 url(asset-path('Roboto-Black.ttf')),
-	// 	 url(asset-path('Roboto-BlackItalic.ttf'));
+// src: url(asset-path('Roboto-Regular.ttf')),
+// 	url(asset-path('Roboto-Thin.ttf')),
+// 	 url(asset-path('Roboto-ThinItalic.ttf')),
+// 	 url(asset-path('Roboto-Light.ttf')),
+// 	 url(asset-path('Roboto-LightItalic.ttf')),
+// 	 url(asset-path('Roboto-Regular.ttf')),
+// 	 url(asset-path('Roboto-Italic.ttf')),
+// 	 url(asset-path('Roboto-Medium.ttf')),
+// 	 url(asset-path('Roboto-MediumItalic.ttf')),
+// 	 url(asset-path('Roboto-Bold.ttf')),
+// 	 url(asset-path('Roboto-BoldItalic.ttf')),
+// 	 url(asset-path('Roboto-Black.ttf')),
+// 	 url(asset-path('Roboto-BlackItalic.ttf'));
+@font-face {
+    font-family: "Roboto Thin";
+    src: url(asset-path('Roboto-Thin.ttf'))
+}
 
 @font-face {
-	font-family: "Roboto Thin";
-	src: url(asset-path('Roboto-Thin.ttf'))
+    font-family: "Roboto Thin Italic";
+    src: url(asset-path('Roboto-Black.ttf'))
 }
-@font-face {
-font-family: "Roboto Thin Italic";
-	src: url(asset-path('Roboto-Black.ttf'))
 
-}
 @font-face {
-font-family: "Roboto Light";
-	src: url(asset-path('Roboto-Light.ttf'))
-
+    font-family: "Roboto Light";
+    src: url(asset-path('Roboto-Light.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Light Italic";
-	src: url(asset-path('Roboto-LightItalic.ttf'))
-
+    font-family: "Roboto Light Italic";
+    src: url(asset-path('Roboto-LightItalic.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Regular";
-	src: url(asset-path('Roboto-Regular.ttf'))
-
+    font-family: "Roboto Regular";
+    src: url(asset-path('Roboto-Regular.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Regular Italic";
-	src: url(asset-path('Roboto-Italic.ttf'))
-
+    font-family: "Roboto Regular Italic";
+    src: url(asset-path('Roboto-Italic.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Medium";
-	src: url(asset-path('Roboto-Medium.ttf'))
-
+    font-family: "Roboto Medium";
+    src: url(asset-path('Roboto-Medium.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Medium Italic";
-	src: url(asset-path('Roboto-MediumItalic.ttf'))
-
+    font-family: "Roboto Medium Italic";
+    src: url(asset-path('Roboto-MediumItalic.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Bold";
-	src: url(asset-path('Roboto-Bold.ttf'))
-
+    font-family: "Roboto Bold";
+    src: url(asset-path('Roboto-Bold.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Bold Italic";
-	src: url(asset-path('Roboto-BoldItalic.ttf'))
-
+    font-family: "Roboto Bold Italic";
+    src: url(asset-path('Roboto-BoldItalic.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Black";
-	src: url(asset-path('Roboto-Black.ttf'))
-
+    font-family: "Roboto Black";
+    src: url(asset-path('Roboto-Black.ttf'))
 }
+
 @font-face {
-font-family: "Roboto Black Italic";
-	src: url(asset-path('Roboto-BlackItalic.ttf'))
-
+    font-family: "Roboto Black Italic";
+    src: url(asset-path('Roboto-BlackItalic.ttf'))
 }
+
 
 /*
 thin 100
@@ -90,100 +89,125 @@ bold 700 Italic
 black 900
 black 900 Italic
 */
-html,body{
-	height: 100%;
-	width: 100%;
-	font-family: 'Roboto Regular';
 
+html,
+body {
+    height: 100%;
+    width: 100%;
+    font-family: 'Roboto Regular';
 }
-$fuentes :(
-    roboto-1: "Roboto Thin",
-    roboto-2: "Roboto Thin Italic",
-    roboto-3: "Roboto Light",
-    roboto-4: "Roboto Light Italic",
-    roboto-5: "Roboto Regular",
-    roboto-6: "Roboto Italic",
-    roboto-7: "Roboto Medium",
-    roboto-8: "Roboto Medium Italic",
-    roboto-9: "Roboto Bold",
-    roboto-10: "Roboto Bold Italic",
-    roboto-11: "Roboto Black",
-    roboto-12: "Roboto Black Italic"
-);
 
-@each $fuente_name,$fuente in $fuentes{
-    .#{$fuente_name}{
+$fuentes :( roboto-1: "Roboto Thin",
+roboto-2: "Roboto Thin Italic",
+roboto-3: "Roboto Light",
+roboto-4: "Roboto Light Italic",
+roboto-5: "Roboto Regular",
+roboto-6: "Roboto Italic",
+roboto-7: "Roboto Medium",
+roboto-8: "Roboto Medium Italic",
+roboto-9: "Roboto Bold",
+roboto-10: "Roboto Bold Italic",
+roboto-11: "Roboto Black",
+roboto-12: "Roboto Black Italic");
+@each $fuente_name,
+$fuente in $fuentes {
+    .#{$fuente_name} {
         font-family: $fuente;
     }
 }
+
 .mobile-fab-tip {
-	position: fixed;
-	right: 85px;
-	padding:0px 0.5rem;
-	text-align: right;
-	background-color: #323232;
-	border-radius: 2px;
-	color: #FFF;
-	width:auto;
+    position: fixed;
+    right: 85px;
+    padding: 0px 0.5rem;
+    text-align: right;
+    background-color: #323232;
+    border-radius: 2px;
+    color: #FFF;
+    width: auto;
 }
 
-.no-margin{
-	margin: 0;
+.no-margin {
+    margin: 0;
 }
-.no-padding{
-	padding: 0;
+
+.no-padding {
+    padding: 0;
 }
-.alto80{
-	height: 80%;
+
+.alto80 {
+    height: 80%;
 }
-.altocompleto{
-	max-height: 100%;
+
+.altocompleto {
+    max-height: 100%;
 }
-.anchocompleto{
-	max-width: 100%;
+
+.anchocompleto {
+    max-width: 100%;
 }
-.fondo-login{
-	background-image: url(#{asset_path('reserva2.jpg')});
-	background-size:cover;
-	background-repeat: none;
+
+.fondo-login {
+    background-image: url(#{asset_path('reserva2.jpg')
 }
-.margen-boton{
-	margin: 5;
+
+);
+background-size:cover;
+background-repeat: none;
+
 }
-.no-margin-bottom{
-	margin-bottom: 0;
+.margen-boton {
+    margin: 5;
 }
-.logo-img{
-	max-height: 64px!important;
+.no-margin-bottom {
+    margin-bottom: 0;
+}
+.logo-img {
+    max-height: 64px!important;
     //padding: 15px 0!important;
 }
-.avatar-img{
-	max-height: 50px!important;
+.avatar-img {
+    max-height: 50px!important;
 }
 // siclo repetitivo para ayuda, hasta el 100
-@for $i from 0 through 100{
-	.borde-radio-#{$i}{
-		border-radius: #{$i}px;
-	}
-	.borde-radio-top-#{$i}{
-		border-radius: #{$i}px #{$i}px 0px 0px;
-	}
-	.borde-radio-buton-#{$i}{
-		border-radius: 0px 0px #{$i}px #{$i}px;
-	}
-	.margin-#{$i}{
-		margin: #{$i}px;
-	}
-	.padding-#{$i}{
-		padding: #{$i}px;
-	}
-	.text-#{$i}{
-		font-size: #{$i}px !important;
-	}
+@for $i from 0 through 100 {
+    .borde-radio-#{$i} {
+        border-radius: #{$i}px;
+    }
+    
+    .borde-radio-top-#{$i} {
+        border-radius: #{$i}px #{$i}px 0px 0px;
+    }
+    
+    .borde-radio-buton-#{$i} {
+        border-radius: 0px 0px #{$i}px #{$i}px;
+    }
+    
+    .margin-#{$i} {
+        margin: #{$i}px;
+    }
+    
+    .padding-#{$i} {
+        padding: #{$i}px;
+    }
+    
+    .padding-horizontal-#{$i} {
+        padding-left: #{$i}px;
+        padding-right: #{$i}px;
+    }
+    
+    .padding-vertical-#{$i} {
+        padding-top: #{$i}px;
+        padding-bottom: #{$i}px;
+    }
+    
+    .text-#{$i} {
+        font-size: #{$i}px !important;
+    }
 }
 //siclo de ayuda hasta el 1000/mil
-@for $i from 1 through 1000{
-	.ancho-#{$i}{
-		width: #{$i}px;
-	}
+@for $i from 1 through 1000 {
+    .ancho-#{$i} {
+        width: #{$i}px;
+    }
 }
