--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
 </div>
-<% @publications.each do |publication| %>
+<% @publicacionesGrupos.each do |publication| %>
   <div class="row center-xs">
     <div class="col-xs-12 col-lg-6">
       <div class="card borde-radio-8">
@@ -20,8 +20,8 @@
           <section class="fondo">
             <h4>Imagen de la publicacion</h4>
           </section>
-          <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
-          <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+          <span class="card-title verdeBri-text left-align" ><%=publication.titulo%></span>
+          <p class="left-align"><%= publication.descripcion%></p>
         </div>
 
       </div>
