cambios en invitado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,13 +119,14 @@
 
   </ul>
 
-
+    <div style="min-height:90vh">
     <%= yield %>
+    </div>
 
     <footer class="page-footer white-text blue-grey darken-2" style="padding-top: 0">
     <div class="footer-copyright ">
         <div class="container">
-            <a class="btn-floating  btn-small waves-effect waves-light btn-flat">
+            <a class="btn-floating   btn-small waves-effect waves-light btn-flat">
                 <i><%= image_tag "icons8-facebook-nuevo-24.png" %></i>
             </a>
             <a class="btn-floating  btn-small waves-effect waves-light btn-flat">
