--- a/app/views/principal/invitado.html.erb
+++ b/app/views/principal/invitado.html.erb
@@ -14,12 +14,14 @@
 </div>
 
 
-<div class="row center-xs">
+<div class="row center-xs" style="margin-top:-30px ">
     <div class="col-xs-12 col-lg-6">
-        <div class="card borde-radio-8">
-            <div class="card-content">
-                <h3>Bienvenidos </h3>
-                <span class="card-title verdeBri-text left-align"> A la Iglesia Gran Comisión Comunidad Cristiana Integral de las Asambleas de Dios</span>
+        <div class="card borde-radio-2 " style="background-color: whitesmoke !important">
+            <div class="card-content left-align">
+
+                <span class="card-title  left-align"> <b>Bienvenidos</b> </span>
+                <span class="card-title  left-align"> A la Iglesia Gran Comisión Comunidad Cristiana
+                    Integral de las Asambleas de Dios</span>
                 <p class="left-align">Queremos aprender de la Palabra de Dios para poder vivir más como Cristo, servir con habilidad a nuestras comunidades y para poder responder al mundo frente a tantos vientos de falsas doctrinas. La sana doctrina trae discernimiento y sabiduría
                     al creyente fiel.</p>
             </div>
@@ -30,22 +32,63 @@
 <div class="container">
     <div class="row">
         <div class="col l3  s12">
-            <p>El propósito es alcanzar a todos los niños y jóvenes de Colombia y el mundo con el mensaje que Cristo salva y pronto viene, utilizando todos los medios que estén a nuestro alcance, formando discípulos llenos del Espíritu Santo.</p>
-            <a class="waves-effect waves-light btn">Ver más</a>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+
+                    <%= image_tag "niños.jpg",class:'activator' %>
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Los niños<i
+                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">Ver más</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Los niños<i
+                            class="material-icons right">close</i></span>
+                    <p>El propósito es alcanzar a todos los niños y jóvenes de Colombia y el mundo con el mensaje que Cristo salva y pronto viene, utilizando todos los medios que estén a nuestro alcance, formando discípulos llenos del Espíritu Santo.</p>
+                </div>
+            </div>
         </div>
         <div class="offset-1 col l3 s12">
-            <p>Este ministerio es uno de los puntos fuertes de la iglesia. Queremos continuar con esta tradición rica y profunda que tenemos en esta área. La educación cristiana tanto para el adulto como para el niño es de vital importancia en su discipulado
-                cristiano.
-            </p>
-            <a class="waves-effect waves-light btn">Ver más</a>
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
+
+                    <%= image_tag "ministerio.jpg",class:'activator' %>
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Ministerio <i
+                                    class="material-icons right">more_vert</i></span>
+                    <p><a href="#">Ver más</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Ministerio <i
+                                    class="material-icons right">close</i></span>
+                    <p>
+                        Este ministerio es uno de los puntos fuertes de la iglesia. Queremos continuar con esta tradición rica y profunda que tenemos en esta área. La educación cristiana tanto para el adulto como para el niño es de vital importancia en su discipulado cristiano.
+                    </p>
+                </div>
+            </div>
         </div>
 
         <div class=" offset-1 col l3  s12">
+            <div class="card">
+                <div class="card-image waves-effect waves-block waves-light">
 
-            <p>Los Grupos de Crecimiento Integral, o GCI, son células o pequeños centros de enseñanzas, las diferentes casas de los hermanos de nuestra comunidad. Aquí se habla de las escrituras de una manera sencilla y práctica y donde los asistentes son
-                edificados.
-            </p>
-            <a class="waves-effect waves-light btn">Ver más</a>
+                    <%= image_tag "grupos.jpg",class:'activator' %>
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4"> Los Grupos <i
+                                            class="material-icons right">more_vert</i></span>
+                    <p><a href="#">Ver más</a></p>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4"> Los Grupos <i
+                                            class="material-icons right">close</i></span>
+                    <p>
+                        Los Grupos de Crecimiento Integral, o GCI, son células o pequeños centros de enseñanzas, las diferentes casas de los hermanos de nuestra comunidad. Aquí se habla de las escrituras de una manera sencilla y práctica y donde los asistentes son edificados.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
