--- a/app/views/principal/home.html.erb
+++ b/app/views/principal/home.html.erb
@@ -1,34 +1,35 @@
-
 <% @publications.each do |publication|%>
-<div class="row center-xs">
-  <div class="col-xs-12 col-lg-6">
-    <div class="card borde-radio-8">
-      <div class="card-content" >
-      	<section>
-          <%=image_tag(publication.imagen.thumb.url)%>
+    <div class="row center-xs">
+        <div class="col-xs-12 col-lg-6">
+            <div class="card borde-radio-8">
+                <div class="card-content">
+                    <section>
+                        <%=image_tag(publication.imagen.thumb.url)%>
 
-      	</section>
-        <span class="card-title verdeBri-text left-align" ><%=publication.titulo%></span>
-        <p class="left-align"><%= publication.descripcion%></p>
-      </div>
+                    </section>
+                    <span class="card-title verdeBri-text left-align"><%=publication.titulo%></span>
+                    <p class="left-align">
+                        <%= publication.descripcion%>
+                    </p>
+                </div>
 
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
-<% end %>
+    <% end %>
 
-<div class="row center-xs">
-  <div class="col-xs-12 col-lg-6">
-    <div class="card borde-radio-8">
-      <div class="card-content" >
-      	<section class="fondo">
-      		<h4>Imagen de la publicacion</h4>
-      	</section>
-        <span class="card-title verdeBri-text left-align" >Nombre de la publicacion</span>
-        <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
-      </div>
+        <div class="row center-xs">
+            <div class="col-xs-12 col-lg-6">
+                <div class="card borde-radio-8">
+                    <div class="card-content">
+                        <section class="fondo">
+                            <h4>Imagen de la publicacion</h4>
+                        </section>
+                        <span class="card-title verdeBri-text left-align">Nombre de la publicacion</span>
+                        <p class="left-align">Descripción detallada de la publicación, realizada por el administrador para que los usuarios visualicen contenido de interés en general para los feligreses de la comunidad cristiana integral</p>
+                    </div>
 
-    </div>
-  </div>
-</div>
+                </div>
+            </div>
+        </div>
